# guiserialportreader

./: CMakeLists.txt  README.md  backend.cpp  backend.h  main.cpp  main.qml
